# audio_watermark

./: .gitignore  CMakeLists.txt  CMakePresets.json  Log.h  dr_mp3.c  dr_wav.c  embed.cpp  embed.h  extract.cpp  extract.h  global.cpp  global.h  main.cpp  matrix.h  new_embed.cpp  new_embed.h  new_extract.cpp  new_extract.h  util.cpp  util.h  vcpkg.json  wavelet.cpp
tests/common/: dr_common.c  dr_common.h
